force-app/main/default/objects/CCH_Invoice__c/CCH_Invoice__c.object-meta.xml
<CustomObject>
    <description>CCH Invoice Records added up inside DOMO dataflow</description>
    <label>CCH Invoice</label>
    <nameField>
        <label>CCH Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCH Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>