force-app/main/default/objects/CCH_Invoice__c/fields/Account_Billed__c.field-meta.xml
<CustomField>
    <fullName>Account_Billed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that is being billed or has WIP</description>
    <label>Account Billed</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CCH Invoices</relationshipLabel>
    <relationshipName>CCH_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>