force-app/main/default/objects/CCH_Invoice__c/fields/Biller__c.field-meta.xml
<CustomField>
    <fullName>Biller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Biller Name listed in CCH</description>
    <inlineHelpText>Biller Name listed in CCH</inlineHelpText>
    <label>Biller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CCH Invoices (Biller)</relationshipLabel>
    <relationshipName>CCH_Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>