force-app/main/default/objects/CCH_Invoice__c/fields/CCH_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>CCH_Invoice_Id__c</fullName>
    <description>The Invoice ID from CCH. If no invoice has been created yet, the Invoice will be named &quot;Unbilled WIP&quot;</description>
    <inlineHelpText>The Invoice ID from CCH. If no invoice has been created yet, the Invoice will be named &quot;Unbilled WIP&quot;</inlineHelpText>
    <label>CCH Invoice Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>