force-app/main/default/objects/CCH_Invoice__c/fields/CCH_Invoice_Id_DOMO__c.field-meta.xml
<CustomField>
    <fullName>CCH_Invoice_Id_DOMO__c</fullName>
    <description>CCH Invoice ID from the domo table https://richeymay.domo.com/datasources/fa9644c2-26f7-4a79-be44-a4bb64b2b918/details/data/table</description>
    <inlineHelpText>CCH Invoice ID from the domo table https://richeymay.domo.com/datasources/fa9644c2-26f7-4a79-be44-a4bb64b2b918/details/data/table</inlineHelpText>
    <label>CCH Invoice Id DOMO</label>
    <length>100</length>
    <referenceTo>CCH_Data_from_DOMO__x</referenceTo>
    <relationshipLabel>CCH Invoices</relationshipLabel>
    <relationshipName>CCH_Invoices</relationshipName>
    <type>ExternalLookup</type>
</CustomField>