force-app/main/default/objects/CCH_Invoice__c/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <description>Notes from the invoice description section</description>
    <inlineHelpText>Notes from the invoice description section</inlineHelpText>
    <label>Invoice Description</label>
    <type>TextArea</type>
</CustomField>