force-app/main/default/objects/CCH_Invoice__c/fields/Invoice_Posted_By__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Posted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice Posted By contact</description>
    <label>Invoice Posted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CCH Invoices</relationshipLabel>
    <relationshipName>CCH_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>