force-app/main/default/objects/CCH_Invoice__c/fields/Invoice_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Posted_Date__c</fullName>
    <description>Date the Invoice was posted</description>
    <inlineHelpText>Date the Invoice was posted</inlineHelpText>
    <label>Invoice Posted Date</label>
    <type>Date</type>
</CustomField>