force-app/main/default/objects/CCH_Invoice__c/fields/Lead_Partner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Partner Name listed in CCH</description>
    <inlineHelpText>Lead Partner Name listed in CCH</inlineHelpText>
    <label>Lead Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CCH Invoices (Lead Partner Name)</relationshipLabel>
    <relationshipName>CCH_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>