force-app/main/default/objects/CCH_Invoice__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager Name listed in CCH</description>
    <inlineHelpText>Manager Name listed in CCH</inlineHelpText>
    <label>Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CCH Invoices (Manager)</relationshipLabel>
    <relationshipName>CCH_Invoices3</relationshipName>
    <type>Lookup</type>
</CustomField>