force-app/main/default/objects/CCH_Invoice__c/fields/Project_Master_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Master_Code__c</fullName>
    <description>Project Master names listed in CCH</description>
    <inlineHelpText>Project Master names listed in CCH</inlineHelpText>
    <label>Project Master Names</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCH_Project_Master_Names</valueSetName>
    </valueSet>
</CustomField>