force-app/main/default/objects/CCH_Invoice__c/fields/Project_Primary_Service_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Primary_Service_Type_Name__c</fullName>
    <description>The primary service type entered in CCH</description>
    <inlineHelpText>The primary service type entered in CCH</inlineHelpText>
    <label>Project Primary Service Type Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCH_Project_Prim_Service_Type_Names</valueSetName>
    </valueSet>
</CustomField>