force-app/main/default/objects/CCH_Invoice__c/fields/Project_Type_Codes__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Codes__c</fullName>
    <description>Project type codes from CCH</description>
    <inlineHelpText>Project type codes from CCH</inlineHelpText>
    <label>Project Type Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCH_Project_Type_Codes</valueSetName>
    </valueSet>
</CustomField>