force-app/main/default/objects/CCH_Invoice__c/fields/Project_Type_Names__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Names__c</fullName>
    <description>Project Type Names listed in CCH</description>
    <inlineHelpText>Project Type Names listed in CCH</inlineHelpText>
    <label>Project Type Names</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCH_Project_Type_Names</valueSetName>
    </valueSet>
</CustomField>