force-app/main/default/objects/CCH_Invoice__c/fields/Service_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Category_Code__c</fullName>
    <description>Category Code from CCH record</description>
    <inlineHelpText>Category Code from CCH record</inlineHelpText>
    <label>Service Category Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Category_Codes</valueSetName>
    </valueSet>
</CustomField>