force-app/main/default/objects/CCH_Invoice__c/fields/Service_Category_Names__c.field-meta.xml
<CustomField>
    <fullName>Service_Category_Names__c</fullName>
    <description>Service category name from CCH record</description>
    <inlineHelpText>Service category name from CCH record</inlineHelpText>
    <label>Service Category Names</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCH_Service_Category_Names</valueSetName>
    </valueSet>
</CustomField>