force-app/main/default/objects/CCH_Invoice__c/fields/Service_Code_Names__c.field-meta.xml
<CustomField>
    <fullName>Service_Code_Names__c</fullName>
    <description>Service Code names from CCH</description>
    <inlineHelpText>Service Code names from CCH</inlineHelpText>
    <label>Service Code Names</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCH_Service_Code_Names</valueSetName>
    </valueSet>
</CustomField>