force-app/main/default/objects/CCH_Invoice__c/fields/Service_Codes__c.field-meta.xml
<CustomField>
    <fullName>Service_Codes__c</fullName>
    <description>Service Codes from CCH</description>
    <inlineHelpText>Service Codes from CCH</inlineHelpText>
    <label>Service Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCH_Service_Code_IDs</valueSetName>
    </valueSet>
</CustomField>