force-app/main/default/objects/CCH_Invoice__c/fields/Staff_Names__c.field-meta.xml
<CustomField>
    <fullName>Staff_Names__c</fullName>
    <description>Names of all staff who entered hours against this invoice in CCH</description>
    <inlineHelpText>Names of all staff who entered hours against this invoice in CCH</inlineHelpText>
    <label>Staff Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>