force-app/main/default/objects/CCH_Invoice__c/fields/Total_Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjusted_Amount__c</fullName>
    <description>Total adjusted amount billed on the invoice</description>
    <inlineHelpText>Total adjusted amount billed on the invoice</inlineHelpText>
    <label>Total Adjusted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>