force-app/main/default/objects/CCH_Invoice__c/fields/Total_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Amount__c</fullName>
    <description>Total billed amount from the invoice.</description>
    <inlineHelpText>Total billed amount from the invoice.</inlineHelpText>
    <label>Total Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>