force-app/main/default/objects/CCH_Invoice__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>Total hours on the invoice</description>
    <inlineHelpText>Total hours on the invoice</inlineHelpText>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>